--- a/P29_VGA_Display_ROM/Top_summary.html
+++ b/P29_VGA_Display_ROM/Top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (12/06/2020 - 12:10:56)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (12/06/2020 - 12:34:38)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>P27_VGA_Display.xise</TD>
@@ -25,30 +25,30 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\_xmsgs/*.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\_xmsgs/*.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top_envsettings.html'>
+<A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -90,19 +90,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>93</TD>
+<TD ALIGN=RIGHT>82</TD>
 <TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>91</TD>
+<TD ALIGN=RIGHT>80</TD>
 <TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>64</TD>
+<TD ALIGN=RIGHT>52</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -114,7 +114,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>11</TD>
+<TD ALIGN=RIGHT>12</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -156,7 +156,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>36</TD>
+<TD ALIGN=RIGHT>30</TD>
 <TD ALIGN=RIGHT>2,278</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -168,42 +168,42 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>93</TD>
+<TD ALIGN=RIGHT>82</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>60</TD>
-<TD ALIGN=RIGHT>93</TD>
-<TD ALIGN=RIGHT>64%</TD>
+<TD ALIGN=RIGHT>48</TD>
+<TD ALIGN=RIGHT>82</TD>
+<TD ALIGN=RIGHT>58%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>93</TD>
+<TD ALIGN=RIGHT>82</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>33</TD>
-<TD ALIGN=RIGHT>93</TD>
-<TD ALIGN=RIGHT>35%</TD>
+<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT>82</TD>
+<TD ALIGN=RIGHT>41%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>4</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>13</TD>
 <TD ALIGN=RIGHT>18,224</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>12</TD>
 <TD ALIGN=RIGHT>232</TD>
 <TD ALIGN=RIGHT>5%</TD>
@@ -354,7 +354,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>5.91</TD>
+<TD ALIGN=RIGHT>6.24</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -369,18 +369,18 @@ System Settings</A>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
 <TD>0 (Setup: 0, Hold: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.unroutes'>All Signals Completely Routed</A></TD>
 <TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -391,21 +391,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>dom. 6. dic. 12:10:08 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\_xmsgs/xst.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>dom. 6. dic. 12:10:15 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>dom. 6. dic. 12:10:28 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>dom. 6. dic. 12:10:38 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Dec 6 12:33:41 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\_xmsgs/xst.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sun Dec 6 12:33:58 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sun Dec 6 12:34:08 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Sun Dec 6 12:34:18 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>dom. 6. dic. 12:10:43 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>dom. 6. dic. 12:10:54 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Sun Dec 6 12:34:25 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Sun Dec 6 12:34:35 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>dom. 6. dic. 12:10:55 2020</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/P29_VGA_Display_ROM\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>dom. 6. dic. 12:10:56 2020</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Dec 6 12:34:36 2020</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/audre/Desktop/Proyecto_final/P29_VGA_Display_ROM\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Dec 6 12:34:38 2020</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/06/2020 - 12:10:57</center>
+<br><center><b>Date Generated:</b> 12/06/2020 - 12:34:38</center>
 </BODY></HTML>
