--- a/Final_project/Top_summary.html
+++ b/Final_project/Top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (12/07/2020 - 10:11:15)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (12/07/2020 - 10:21:58)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Final_project.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/*.xmsgs?&DataKey=Warning'>5 Warnings (1 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/*.xmsgs?&DataKey=Warning'>7 Warnings (6 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -90,19 +90,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>82</TD>
+<TD ALIGN=RIGHT>75</TD>
 <TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>80</TD>
+<TD ALIGN=RIGHT>73</TD>
 <TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>53</TD>
+<TD ALIGN=RIGHT>47</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -114,7 +114,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>11</TD>
+<TD ALIGN=RIGHT>10</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -156,39 +156,39 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT>27</TD>
 <TD ALIGN=RIGHT>2,278</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
-<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT>32</TD>
 <TD ALIGN=RIGHT>4,556</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>82</TD>
+<TD ALIGN=RIGHT>75</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>48</TD>
-<TD ALIGN=RIGHT>82</TD>
-<TD ALIGN=RIGHT>58%</TD>
+<TD ALIGN=RIGHT>41</TD>
+<TD ALIGN=RIGHT>75</TD>
+<TD ALIGN=RIGHT>54%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>82</TD>
+<TD ALIGN=RIGHT>75</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
 <TD ALIGN=RIGHT>34</TD>
-<TD ALIGN=RIGHT>82</TD>
-<TD ALIGN=RIGHT>41%</TD>
+<TD ALIGN=RIGHT>75</TD>
+<TD ALIGN=RIGHT>45%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
@@ -216,15 +216,15 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB16BWERs</TD>
+<TD ALIGN=RIGHT>0</TD>
 <TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>100%</TD>
+<TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB8BWERs</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>3</TD>
 <TD ALIGN=RIGHT>64</TD>
-<TD ALIGN=RIGHT>0%</TD>
+<TD ALIGN=RIGHT>4%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFIO2/BUFIO2_2CLKs</TD>
@@ -354,7 +354,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>6.20</TD>
+<TD ALIGN=RIGHT>3.45</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -391,21 +391,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:09:41 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/xst.xmsgs?&DataKey=Warning'>5 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:09:50 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:10:40 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (8 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:10:52 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:21:18 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/xst.xmsgs?&DataKey=Warning'>5 Warnings (4 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:21:24 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:21:32 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:21:41 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:10:59 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (4 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:11:11 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:21:47 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:21:56 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. 7. dic. 10:11:12 2020</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. 7. dic. 10:11:14 2020</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. 7. dic. 10:21:57 2020</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. 7. dic. 10:21:58 2020</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/07/2020 - 10:11:15</center>
+<br><center><b>Date Generated:</b> 12/07/2020 - 10:21:58</center>
 </BODY></HTML>
