--- a/Final_project/Top_summary.html
+++ b/Final_project/Top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (12/07/2020 - 10:29:27)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (12/07/2020 - 10:59:46)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Final_project.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/*.xmsgs?&DataKey=Warning'>7 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/*.xmsgs?&DataKey=Warning'>10 Warnings (8 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -204,14 +204,14 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>16</TD>
 <TD ALIGN=RIGHT>232</TD>
-<TD ALIGN=RIGHT>5%</TD>
+<TD ALIGN=RIGHT>6%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>12</TD>
-<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT>16</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -354,7 +354,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.41</TD>
+<TD ALIGN=RIGHT>3.29</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -391,21 +391,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:28:48 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/xst.xmsgs?&DataKey=Warning'>5 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:28:54 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:29:02 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:29:10 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:54:59 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/xst.xmsgs?&DataKey=Warning'>2 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:59:13 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:59:21 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (2 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:59:29 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/par.xmsgs?&DataKey=Warning'>6 Warnings (6 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:29:15 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:29:24 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:59:34 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>lun. 7. dic. 10:59:43 2020</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. 7. dic. 10:29:25 2020</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. 7. dic. 10:29:26 2020</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. 7. dic. 10:59:44 2020</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Semestre_9/Sistemas_Digitales_Avanzados/sisdig_final/Final_project\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. 7. dic. 10:59:45 2020</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/07/2020 - 10:29:27</center>
+<br><center><b>Date Generated:</b> 12/07/2020 - 10:59:46</center>
 </BODY></HTML>
